--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,11 @@
     <string name="CHAT_SERVER_URL">https://campus.tapt.io/</string>
 
     <string name="search_hint">Search</string>
+    <string name="find_friends_facebook">Finds Facebook friends who are also using Tapt!</string>
+    <string name="need_contant_permission">To find friends, Tapt needs permission to view your
+        contacts
+    </string>
+    <string name="facebook_rationale">Tapt needs access to you\'re facebook friends to find
+        friends.
+    </string>
 </resources>
