--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,8 @@
     <string name="prompt_message">Message</string>
     <string name="error_connect">Failed to connect</string>
     <string name="user_action_typing">is typing</string>
+    <string name="find_people_near_you">Tapt needs access to your location so we can find friends
+        that are near you.
+    </string>
+    <string name="need_location">Tapt needs your location to find friends near you</string>
 </resources>
