--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,7 +156,7 @@
         that are near you.
     </string>
     <string name="need_location">Tapt needs your location to find friends near you</string>
-    <string name="no_comment">This post is wack. Be the first to comment on this post!</string>
+    <string name="no_comment">Share your opinions publicly or anonymously below...</string>
 
 
 
