--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
     <string name="changephone_number_in_use">Number already being used.</string>
     <string name="change_phone_invalid_code">Incorrect code</string>
     <string name="data_saved">Saved</string>
-    <string name="describe_event">Enter your status here...</string>
+    <string name="describe_event">Enter your status here…</string>
 
 
     <!--Square Camera-->
@@ -137,8 +137,8 @@
     <!--<string name="DEV_SOCKET_URL">https://devapi.tapt.io/</string>-->
 
 
-    <string name="SOCKET_URL">https://api.tapt.io/</string>
-    <!--<string name="SOCKET_URL">https://devapi.tapt.io/</string>-->
+    <!--<string name="SOCKET_URL">https://api.tapt.io/</string>-->
+    <string name="SOCKET_URL">https://devapi.tapt.io/</string>
 
     <string name="search_hint">Search</string>
     <string name="find_friends_facebook">Finds Facebook friends who are also using Tapt!</string>
@@ -159,7 +159,7 @@
         that are near you.
     </string>
     <string name="need_location">Tapt needs your location to find friends near you</string>
-    <string name="no_comment">Share your opinions publicly or anonymously below...</string>
+    <string name="no_comment">Share your opinions publicly or anonymously below…</string>
 
 
     <string name="placeholder_bio0">I\’m a big fat poopy face who didn\’t write a bio</string>
