--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,8 +135,8 @@
     <string name="title_activity_rooms">RoomsActivity</string>
 
 
-    <!--<string name="SOCKET_URL">https://api.tapt.io/</string>-->
-    <string name="SOCKET_URL">https://devapi.tapt.io/</string>
+    <string name="SOCKET_URL">https://api.tapt.io/</string>
+    <!--<string name="SOCKET_URL">https://devapi.tapt.io/</string>-->
 
     <string name="search_hint">Search</string>
     <string name="find_friends_facebook">Finds Facebook friends who are also using Tapt!</string>
@@ -800,6 +800,7 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE\n\n
 
+        RoundedImageView\n
         Copyright 2015 Vincent Mi \n\n
 
         Licensed under the Apache License, Version 2.0 (the "License");\n
@@ -835,6 +836,26 @@
         AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n
         LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n
-        SOFTWARE.\n
+        SOFTWARE.\n\n
+
+        The Android Open Source Project\n
+        Copyright © 2015 The Android Open Source Project\n\n
+
+        Licensed under the Apache License, Version 2.0 (the \"License\");\n
+        you may not use this file except in compliance with the License.\n
+        You may obtain a copy of the License at\n\n
+
+            http://www.apache.org/licenses/LICENSE-2.0\n\n
+
+        Unless required by applicable law or agreed to in writing, software\n
+        distributed under the License is distributed on an "AS IS" BASIS,\n
+        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
+        See the License for the specific language governing permissions and\n
+        limitations under the License.\n\n
+
+
     ]]></string>
+    <string name="create_account_agree">By tapping to continue, you are indicating that you have
+        read and agreed to the following
+    </string>
 </resources>
