--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,7 +159,7 @@
     <string name="need_location">Tapt needs your location to find friends near you</string>
     <string name="no_comment">Share your opinions publicly or anonymously below…</string>
 
-    <string name="no_results">No results found.</string>
+    <string name="no_results">No results found</string>
 
     <string name="discover_no_posts_campus">Is anybody out there?!\n\n Looks like you\'re the first
         one here. Make a post so the rest of the campus can recognize
