--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,8 +148,8 @@
     <string name="title_activity_rooms">RoomsActivity</string>
 
 
-    <!--<string name="SOCKET_URL">https://api.tapt.io/</string>-->
-    <string name="SOCKET_URL">https://devapi2.tapt.io/</string>
+    <string name="SOCKET_URL">https://api.tapt.io/</string>
+    <!--<string name="SOCKET_URL">https://devapi2.tapt.io/</string>-->
 
     <string name="search_hint">Search</string>
     <string name="find_friends_facebook">Finds Facebook friends who are also using Tapt!</string>
