--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,7 +169,7 @@
         that are near you.
     </string>
     <string name="need_location">Tapt needs your location to find friends near you</string>
-    <string name="no_comment">Share your opinions publicly or anonymously below…</string>
+    <string name="no_comment">Start the conversation with a comment!</string>
 
     <string name="no_results">No results found</string>
 
