--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,9 +176,7 @@
     <string name="discover_no_posts_campus">Is anybody out there?!\n\n Looks like you\'re the first
         one here. Make a post so the rest of the campus can recognize
     </string>
-    <string name="discover_no_posts_friends">Don\’t be #foreveralone \n\n Start adding your friends
-        to Tapt
-    </string>
+    <string name="discover_no_posts_hot">No posts at this time</string>
 
     <string name="profile_no_posts">Your Story \n\n It\'s a ghost town out here! Make a post so the
         rest of the campus can recognize
