--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1631,7 +1631,7 @@ limitations under the License.\n\n
     </string>
     <string name="block_confirmation_text">This person will be blocked, and this conversation will be deleted. They will not be able to message you anymore.</string>
     <string name="leave_group_chat_dialog_text">This conversation will be deleted from your inbox, and you won\'t be able to retrieve it.</string>
-    <string name="empty_find_friends">Find your friends on Tapt</string>
+    <string name="empty_find_friends">No results</string>
     <string name="empty_fragment_rooms">Message a friend or the entire squad with group messaging</string>
     <string name="no_messages">Say something to start the conversation</string>
     <string name="empty_feed_button_campus">Take me there!</string>
