added dialog when reactivating account

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1652,4 +1652,5 @@ limitations under the License.\n\n
         \n\n\n
         If you would like to delete your account permanently, please contact support@tapt.io
     </string>
+    <string name="reactivvate_acount_message">Welcome back to Tapt, we’re excited to have your here again!</string>
 </resources>
