--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,7 +150,7 @@
     <string name="search_hint">Search</string>
     <string name="find_friends_facebook">Finds Facebook friends who are also using Tapt!</string>
     <string name="need_contant_permission">
-        Find friends on Tapt
+        Find your Facebook friends on Tapt
 
     </string>
     <string name="facebook_rationale">Find your friends on Tapt
